fixed bug in chrome mobile where it cut off right edge on list scroll

--- a/resources/public/css/app.css
+++ b/resources/public/css/app.css
@@ -34,7 +34,7 @@ html, body, #root, #app {
     overflow: hidden;
 }
 
-div {
+div, li {
     box-sizing: border-box;
     -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
     -webkit-user-select: none;
@@ -342,10 +342,10 @@ textarea {
 .list, [class*="-list"] {
     list-style-type: none;
     margin: 0;
-    padding: 0;
+    /* added due to weird rendering issue on chrome mobile where it cuts off right edge */
+    padding: 1px;
     height: 100%;
     overflow-y: auto;
-    overflow-x: hidden;
 }
 
 #check-in-rscs-list {
@@ -494,7 +494,6 @@ textarea {
     width: 100%;
     height: 40px;
     margin-bottom: .5em;
-    box-sizing: border-box;
     display: flex;
     align-items: center;
     border-bottom-right-radius: 3px;
